--- a/.github/workflows/task5.yml
+++ b/.github/workflows/task5.yml
@@ -15,4 +15,5 @@ jobs:
   jobCallToWorkflow:
     runs-on: self-hosted
     steps:
+      - run: workflows/checkout
       - uses: ./.github/workflows/task1.yml
