--- a/.github/workflows/task6.yml
+++ b/.github/workflows/task6.yml
@@ -14,7 +14,7 @@ jobs:
           STEP_VAR: "step_var"
         shell: "cmd"
         run: echo ${{ env.STEP_VAR }}
-      - run: echo $JOB_VAR
+      - run: echo ${{ env.JOB_VAR }}
         shell: "cmd"
       - run: echo ${{ env.WORKFLOW_VAR }}
         shell: "cmd"
