--- a/.github/workflows/task7.yml
+++ b/.github/workflows/task7.yml
@@ -1,9 +1,10 @@
+name: "Github environment variables"
 on:
   workflow_dispatch:
 jobs:
   job:
     runs-on: windows-latest
     steps:
-      - runs: echo $GITHUB_EVENT_NAME
-      - runs: echo $GITHUB_REPOSITORY
-      - runs: echo $GITHUB_SHA
+      - run: echo $GITHUB_EVENT_NAME
+      - run: echo $GITHUB_REPOSITORY
+      - run: echo $GITHUB_SHA
