--- a/.github/workflows/task7.yml
+++ b/.github/workflows/task7.yml
@@ -6,5 +6,8 @@ jobs:
     runs-on: windows-latest
     steps:
       - run: echo $GITHUB_EVENT_NAME
+        shell: cmd
       - run: echo $GITHUB_REPOSITORY
+        shell: cmd
       - run: echo $GITHUB_SHA
+        shell: cmd
