--- a/.github/workflows/task7.yml
+++ b/.github/workflows/task7.yml
@@ -5,9 +5,9 @@ jobs:
   job:
     runs-on: windows-latest
     steps:
-      - run: echo ${{ env.GITHUB_EVENT_NAME }}
+      - run: echo ${{ GITHUB_EVENT_NAME }}
         shell: cmd
-      - run: echo ${{ env.GITHUB_REPOSITORY }}
+      - run: echo ${{ GITHUB_REPOSITORY }}
         shell: cmd
-      - run: echo ${{ env.GITHUB_SHA }}
+      - run: echo ${{ GITHUB_SHA }}
         shell: cmd
