--- a/.github/workflows/task10.yml
+++ b/.github/workflows/task10.yml
@@ -4,6 +4,8 @@ on:
 jobs:
   job1:
     uses: "./.github/workflows/task10b.yml"
+    with:
+      input1: "maci"
   job2:
     outputs:
       output1: ${{ secrets.ENV_SECRET1 }}
